# reasonix-java

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  build-check.sh  build.sh  docker-compose.yml  gen_pom.py  mvnw  pom.xml  reasonix.toml
desktop/: .gitignore  package.json
desktop/frontend/: .gitignore  pnpm-lock.yaml  vite.config.ts
desktop/frontend/scripts/: test-todo-visibility.mjs
desktop/frontend/sourcemaps/2e7a0ac/: assets__CapabilitiesPanel-DkXZaLrv.js.map  assets__HistoryPanel-CQPpJ0k3.js.map  assets__HljsCode-CCNptEfA.js.map  assets__HljsDiff-BIfgKwZ3.js.map  assets__InlineConfirmButton-BbXjhDQL.js.map  assets__MarkdownRenderer-BMWJ3j8s.js.map  assets__MemoryPanel-CSHdotLf.js.map  assets__ResizableDrawer-CggDE8tY.js.map  assets__SettingsPanel-DDhiWJAj.js.map  manifest.json  (+9 more)
desktop/frontend/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
docs/: reasonix复刻prd.md
helm/reansonix/: Chart.yaml  values.yaml
site/: 404.html  docs.html  index.html  package.json  vite.config.ts
site/data/: community.json
site/src/: index.css
src/main/resources/: application.yml
web/: index.html  package.json  pnpm-lock.yaml
web-vue/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-vue/src/: App.vue
web-vue/src/components/: ReasoningBlock.vue
web-vue/src/styles/: chat-layout.css  design-tokens.css
web-vue/src/types/: lucide-vue.d.ts
web/src/: App.tsx
web/src/api/: chat.ts
web/src/pages/: ChatPage.tsx
web/src/stores/: chatStore.ts
(+282 files in other folders)
