[package]
name = "reansonix-desktop"
version = "0.1.0"
description = "Reansonix Desktop"
authors = ["Reansonix"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "global-shortcut", "notification"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
